# 1b

./: .gitignore  Dockerfile  README.md  approach_explanation.md  main.py  pyproject.toml  requirements.txt
input/: .gitkeep
output/: .gitkeep
persona_document_intelligence/: __init__.py
persona_document_intelligence/advanced/: __init__.py  intelligent_extractor.py  subsection_analyzer.py
persona_document_intelligence/core/: __init__.py  document_processor.py  persona_analyzer.py  relevance_ranker.py  section_extractor.py
persona_document_intelligence/utils/: __init__.py  output_formatter.py
