[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-document-intelligence"
version = "1.0.0"
description = "Persona-Driven Document Intelligence System for Round 1B"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adobe Hack Team", email = "team@adobehack.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "pdfplumber==0.9.0",
    "numpy==1.24.3",
    "scikit-learn==1.3.0",
    "sentence-transformers==2.2.2",
    "torch==2.0.1",
    "transformers==4.30.2",
    "nltk==3.8.1",
    "spacy==3.6.0",
]

[project.scripts]
persona-doc-intel = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["persona_document_intelligence*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"] 